--- a/wp-content/themes/chefscollaborative/style.css
+++ b/wp-content/themes/chefscollaborative/style.css
@@ -1175,6 +1175,7 @@ img.alignleft {
 #left .sidebar .nav-cont .child-list li a,
 #left .sidebar .nav-cont .child-list li {
 	display: inline-block;
+	width: 180px;
 }
 #left .sidebar .nav-cont {
 	background-color: #E2E1DD;
