Add theme update comment

--- a/wp-content/themes/chefscollaborative/style.css
+++ b/wp-content/themes/chefscollaborative/style.css
@@ -5,6 +5,8 @@ Version: 1.0
 Author: Carl Tashian
 Author URI: http://www.tashian.com/carl/
 
+Theme Updated: 7/13/13 Chris R-W c.russell.walker@gmail.com
+
 	This is based on Acid Green Pro and other 3 column themes.
 */
 
